# mir

./: .gitignore  CMakeLists.txt
c2mir/: c2mir.c  c2mir.h  c2mirtest.c
